--- a/themes/next/source/css/_variables/base.styl
+++ b/themes/next/source/css/_variables/base.styl
@@ -189,12 +189,15 @@ $pagination-active-border       = $grey-light
 // Layout sizes
 // --------------------------------------------------
 
-$main-desktop                   = 960px
+$main-desktop                   = 1080px
 $main-desktop-large             = 1200px
 
-$content-desktop                = 700px
+$content-desktop                = 810px
 $content-desktop-large          = 900px
+
 $content-desktop-padding        = 40px
+$content-tablet-padding         = 10px
+$content-mobile-padding         = 8px
 
 $sidebar-desktop                = 240px
 
@@ -323,8 +326,8 @@ $full-image-margin-vertical   = 25px
 
 //  .post-expand .post-eof
 //  In Muse scheme, margin above and below the post separator
-$post-eof-margin-top          = 80px  //  or 160px for more white space
-$post-eof-margin-bottom       = 60px  //  or 120px for less white space
+$post-eof-margin-top          = 49px  //  or 160px for more white space
+$post-eof-margin-bottom       = 36px  //  or 120px for less white space
 
 
 // Iconography
